--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ body {
 
 /* Spezielle Brand-Farben beim Hover (Optional - sieht schicker aus) */
 .nav-icon-link.tiktok:hover {
-  color: #000000;
+  color: #00f2ea;
 }
 .nav-icon-link.insta:hover {
   color: #e1306c;
